--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,11 @@
-version: '3.7'
+version: '3.8'
 
 services:
   db:
     image: postgres:15
     container_name: booker_db
+    volumes:
+      - postgresdata:/var/lib/postgresql/data
     env_file:
       - .env_docker
     ports:
@@ -45,3 +47,27 @@ services:
     command: ["/booker/docker/celery.sh", "flower"]
     env_file:
       - .env_docker
+
+  prometheus:
+    image: prom/prometheus:v2.43.0
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yaml
+      - prometheusdata:/prometheus
+    restart: unless-stopped
+    ports:
+      - 9090:9090
+
+  grafana:
+    image: grafana/grafana:9.4.7
+    container_name: grafana
+    volumes:
+      - grafanadata:/var/lib/grafana
+    restart: unless-stopped
+    ports:
+      - 3000:3000
+      
+volumes:
+  postgresdata:
+  grafanadata:
+  prometheusdata:
