--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ Pillow==10.1.0
 platformdirs==4.0.0
 pluggy==1.3.0
 prometheus-client==0.18.0
+prometheus-fastapi-instrumentator==6.1.0
 prompt-toolkit==3.0.39
 pyasn1==0.5.0
 pycodestyle==2.11.1
